[package]
name = "jamtwopoolps"
version = "0.1.0"
edition = "2024"

[dependencies]
pharmsol = "0.7.8"
anyhow = "1.0.86"
argmin = "0.10.0"
argmin-math = { version = "0.4.0", features = ["ndarray_v0_15-nolinalg"] }
cached = { version = "0.55.1" }
csv = "1.3.0"
dashmap = "6.0.1"
diffsol = "=0.5.3"
indicatif = "0.17.8"
lazy_static = "1.4.0"
libloading = { version = "0.8.6", optional = true, features = [] }
nalgebra = "0.33.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
rand = "0.9.0"
rand_distr = "0.5.0"
rayon = "1.10.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "2.0.11"